fix: kanban spacing on width > 1980px

--- a/src/scss/Kanban.scss
+++ b/src/scss/Kanban.scss
@@ -5,10 +5,17 @@
     display: none;
   }
 
+  @media only screen and (min-width: 1981px) {
+    .columns {
+      .column {
+        flex-basis: 30% !important;
+      }
+    }
+  }
+
   .columns {
     .column {
       flex-basis: 100%;
-
       .title {
         text-align: center;
         font-size: xx-large;
@@ -21,6 +28,7 @@
     .backlog {
       .item {
         flex-basis: 80%;
+        min-width: 0 !important;
       }
 
       .items-list {
